--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-<div class="posts">
+<h1>This is the projects page</h1>
+
+<!-- <div class="posts">
   {% for project in site.projects %}
     <article class="project">    
       
@@ -16,3 +18,4 @@ layout: default
     </article>
   {% endfor %}
 </div>
+ -->
