--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>This is the projects page</h1>
 
-<!-- <div class="posts">
+ <div class="posts">
   {% for project in site.projects %}
     <article class="project">    
       
@@ -18,4 +18,3 @@ layout: default
     </article>
   {% endfor %}
 </div>
- -->
