--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ layout: page
 <ul>
 {% for project in site.data.projects %}
   <li>
-    <a href="https://github.com/sgang007/{{ project.github }}">
+    <a href="{{site.baseurl}}{{ project.github }}">
       {{ project.name }}
     </a>
   </li>
