--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,6 @@ published: true
 
 This is the link to my resume
 
-Google Doc link: [Resume][]
+Google Doc link: [Resume][id1]
 
-[Resume]:https://docs.google.com/document/d/1ddXAhdtHGUSoaoFzz9PNLiiNpplkZYnwsCcoXu85DzY/edit?usp=docs_home
+[id1]: https://docs.google.com/document/d/1ddXAhdtHGUSoaoFzz9PNLiiNpplkZYnwsCcoXu85DzY/edit?usp=docs_home "Resume Doc"
