--- a/resume.html
+++ b/resume.html
@@ -4,13 +4,9 @@ title: "Resume"
 published: true
 ---
 
-This is the link to my resume
 
-Google Doc link: [Resume][id1]
-
-
-
-
-
-
-[id1]: https://docs.google.com/document/d/1ddXAhdtHGUSoaoFzz9PNLiiNpplkZYnwsCcoXu85DzY/edit?usp=docs_home "Resume Doc"
+<div class = "posts">
+  View my resume on Google Doc: 
+  <a href="{{site.data.resume.doc}}">site.resume.doc.title</a>
+</div>
+  
