--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,6 @@ published: true
 
 <div class = "posts">
   View my resume on Google Doc: 
-  <a href="{{site.data.resume.doc.link}}">site.data.resume.doc.title</a>
+  <a href="{{site.data.resume[link]}}">site.data.resume.title</a>
 </div>
   
