--- a/resume.html
+++ b/resume.html
@@ -2,11 +2,12 @@
 layout: page
 title: "Resume"
 published: true
+l_type: doc
 ---
 
 
 <div class = "posts">
   View my resume on Google Doc: 
-  <a href="{{site.data.resume[link]}}">{{site.data.resume.title}}</a>
+  <a href="{{site.data.resume[doc].link}}">{{site.data.resume[doc].title}}</a>
 </div>
   
