--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,6 @@ l_type: doc
 
 <div class = "posts">
   View my resume on Google Doc: 
-  <a href="{{site.data.resume[doc].link}}">{{site.data.resume[doc].title}}</a>
+  <a href="{{site.baseurl}}{{site.data.projects.github}}">{{site.data.projects.name[0]}}</a>
 </div>
   
