--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,6 @@ l_type: doc
 
 <div class = "posts">
   View my resume on Google Doc: 
-  <a href="{{site.baseurl}}{{site.data.projects.github}}">{{site.data.projects.name[0]}}</a>
+  <a href="https://docs.google.com/document/d/1ddXAhdtHGUSoaoFzz9PNLiiNpplkZYnwsCcoXu85DzY/edit">College Resume</a>
 </div>
   
