Images right added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@ layout: default
   {% endif %}
   <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
   {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+    <a href="{{ paginator.next_page_path }}" class="next">
+      Next
+      <img src="/images/right_arrow.png">
+    </a>
   {% else %}
     <span class="next ">Next</span>
   {% endif %}
