Added right and left arrows

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@ layout: default
 <!-- Pagination links -->
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
-  {% else %}
-    <span class="previous">Previous</span>
+    <a href="{{ paginator.previous_page_path }}" class="previous">
+      <img src="/images/left_arrow.png">
+    </a>
+  <!-- {% else %}
+    <span class="previous">Previous</span> -->
   {% endif %}
-  <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+  <!-- <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span> -->
   {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path }}" class="next">
      
