--- a/projects.html
+++ b/projects.html
@@ -18,10 +18,10 @@ layout: page
 {% endfor %}
 </ul> -->
 
-{% for project in site.project_details %}
-  <h1>{{project.name}}</h1>
-  <p>{{project.content}}</p>
-
+{% for topic in site.project %}
+  <li>
+    <a href="{{ topic.url }}">{{ topic.title}}</a>
+  </li>
 {% endfor %}
 <!-- <ul>
 {% for project in site.data.projects %}
