--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<h1>This is the projects page</h1>
+<h1>Projects Undertaken</h1>
 <!-- <ul>
 {% for project in site.data.projects %}
   <li>
