--- a/projects.html
+++ b/projects.html
@@ -18,12 +18,13 @@ layout: page
 {% endfor %}
 </ul> -->
 
-{% for topic in site.project %}
+<!--{% for topic in site.project %}
   <li>
     <a href="{{ topic.url }}">{{ topic.title}}</a>
   </li>
-{% endfor %}
-<!-- <ul>
+{% endfor %} -->
+
+<ul>
 {% for project in site.data.projects %}
   <li>
     <a href="{{site.baseurl}}{{ project.github }}">
@@ -31,5 +32,5 @@ layout: page
     </a>
   </li>
 {% endfor %}
-</ul> -->
+</ul> 
 
